--- a/gamestats.pot
+++ b/gamestats.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GameStats 0.3\n"
 "Report-Msgid-Bugs-To: https://github.com/Avaren/gamestats-locale\n"
-"POT-Creation-Date: 2018-08-02 21:05+0100\n"
+"POT-Creation-Date: 2018-08-06 22:44+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -38,7 +38,25 @@ msgstr ""
 msgid "Added {account}"
 msgstr ""
 
+msgid "Adding ARK chat"
+msgstr ""
+
+msgid "Adding you to group {role}"
+msgstr ""
+
+msgid "Adding {account} for {name}"
+msgstr ""
+
+msgid "Are you sure you want to cancel the event {event_name}? (yes or no)"
+msgstr ""
+
+msgid "Are you sure you want to delete your profile?"
+msgstr ""
+
 msgid "Available languages: [{languages}]"
+msgstr ""
+
+msgid "Card {card_name} not found."
 msgstr ""
 
 msgid "Character not found."
@@ -65,10 +83,37 @@ msgstr ""
 msgid "Default FC for this server registered as {name} on {server}"
 msgstr ""
 
+msgid "Describe your event in more detail: (Optional, enter x to skip)"
+msgstr ""
+
 msgid "Distance between {user1} and {user2}: {dist}ly"
 msgstr ""
 
 msgid "Distance to center"
+msgstr ""
+
+msgid "Event can't end before it starts, try again."
+msgstr ""
+
+msgid "Event can't start before now, try again."
+msgstr ""
+
+msgid "Event creation cancelled."
+msgstr ""
+
+msgid "Event creation continuing via DM."
+msgstr ""
+
+msgid "Event name limited to 64 characters, try again."
+msgstr ""
+
+msgid "Event not cancelled."
+msgstr ""
+
+msgid "Event not found on this server."
+msgstr ""
+
+msgid "Event {event_name} cancelled"
 msgstr ""
 
 msgid "Files for {language_key} not found"
@@ -81,6 +126,17 @@ msgid ""
 "1000 @Best Rank\n"
 "500 Nearly Best\n"
 "100 Newbie"
+msgstr ""
+
+msgid ""
+"For this stat please reply with a list of roles - one on each line.\n"
+"You need one role for each of these: {roles}"
+msgstr ""
+
+msgid "Hero {hero_name} not found."
+msgstr ""
+
+msgid "I attempted to DM you further questions to create your event but failed. Try sending me a DM first."
 msgstr ""
 
 msgid "I tried to DM you {mention} but you have DMs disabled, please DM me that command."
@@ -104,13 +160,34 @@ msgstr ""
 msgid "Looking up {user} on {game}..."
 msgstr ""
 
+msgid "Name your event: (Enter x to cancel)"
+msgstr ""
+
+msgid "No ARK server registered for this server"
+msgstr ""
+
 msgid "No ARK server registered for this server. Register with {prefix}ark register <ip> <port>"
 msgstr ""
 
 msgid "No Battlerite profile found for {profile}."
 msgstr ""
 
-msgid "No CSGO players found on this server. Do {prefix}steam first."
+msgid "No CSGO players found on this server. Do {prefix}csgo first."
+msgstr ""
+
+msgid "No Crucible history found for {name}"
+msgstr ""
+
+msgid "No Destiny 2 characters found."
+msgstr ""
+
+msgid "No Destiny 2 clan found."
+msgstr ""
+
+msgid "No Destiny 2 players on {platform} found."
+msgstr ""
+
+msgid "No Destiny 2 profile found on {platform}."
 msgstr ""
 
 msgid "No PUBG players found on this server. Do {prefix}pubg first."
@@ -122,22 +199,58 @@ msgstr ""
 msgid "No characters found on that account. Please confirm account and try again."
 msgstr ""
 
+msgid "No completed raids found for {name}"
+msgstr ""
+
+msgid "No data for {name}"
+msgstr ""
+
+msgid "No events for this server."
+msgstr ""
+
 msgid "No games currently being played."
+msgstr ""
+
+msgid "No group categories defined for this server."
+msgstr ""
+
+msgid "No group found for {role}"
+msgstr ""
+
+msgid "No groups defined for this server."
 msgstr ""
 
 msgid "No groups defined on {server}, use {command}"
 msgstr ""
 
+msgid "No guilds registered for live Paragon matches"
+msgstr ""
+
 msgid "No matches found. Submit some via {prefix}csgo match <share code>"
+msgstr ""
+
+msgid "No matches recorded."
 msgstr ""
 
 msgid "No operator information found for {name} on {platform} {region}"
 msgstr ""
 
-msgid "No ranked CSGO players found on this server. Do {prefix}steam first."
+msgid "No raid history found for {name}"
+msgstr ""
+
+msgid "No ranked CSGO players found on this server. Do {prefix}csgo first."
+msgstr ""
+
+msgid "No rare trophies found for {account}"
+msgstr ""
+
+msgid "No recent matches could be found."
 msgstr ""
 
 msgid "No recent matches found for {account}"
+msgstr ""
+
+msgid "No recent trophies found for {account}"
 msgstr ""
 
 msgid "No response from user."
@@ -146,16 +259,34 @@ msgstr ""
 msgid "No season information found for {name} on {platform} {region}"
 msgstr ""
 
+msgid "No trophy cabinet found for {account}"
+msgstr ""
+
 msgid "No {game} players found on this server. Do {prefix}{game_key} first."
 msgstr ""
 
 msgid "No {game} stats found for {user} on {platform}"
 msgstr ""
 
+msgid "Not tagging any groups in this event."
+msgstr ""
+
+msgid "Only the event owner ({owner_name}) can cancel this event."
+msgstr ""
+
+msgid "Platform invalid, valid platforms: {platforms}"
+msgstr ""
+
 msgid "Player {account} not found"
 msgstr ""
 
 msgid "Player {user} (aka {nickname}) has no stats for season {season}."
+msgstr ""
+
+msgid "Please answer the following questions:"
+msgstr ""
+
+msgid "Please enter your account name for {class_name}:"
 msgstr ""
 
 msgid "Please enter your {game} account name:"
@@ -176,9 +307,24 @@ msgstr ""
 msgid "Prestige setup complete."
 msgstr ""
 
+msgid "Profile NOT removed."
+msgstr ""
+
 msgid ""
 "Profile created. To add accounts use {prefix}add <account>\n"
 "Supported accounts: {accounts}"
+msgstr ""
+
+msgid "Profile not found."
+msgstr ""
+
+msgid "Profile successfully deleted."
+msgstr ""
+
+msgid "Registering Ark server {ip}:{port} for this server"
+msgstr ""
+
+msgid "Removed group {role}"
 msgstr ""
 
 msgid "Removed prestige for {game}, {stat_name}"
@@ -214,7 +360,7 @@ msgstr ""
 msgid "Shows your stats from {game}"
 msgstr ""
 
-msgid "Sorry I can't find {name} on {server}, are you se that's correct?"
+msgid "Sorry I can't find {name} on {server}, are you sure that's correct?"
 msgstr ""
 
 msgid "Sorry that account isn't on your profile."
@@ -232,6 +378,16 @@ msgid ""
 "For example enter the following: **{prefix}add steam**"
 msgstr ""
 
+msgid ""
+"Sorry the account {account} is not supported yet.\n"
+"The supported accounts are {supported_accounts}\n"
+"\n"
+"For example enter the following: **{prefix}add steam**"
+msgstr ""
+
+msgid "Sorry, I didn't get that. Please try again"
+msgstr ""
+
 msgid "Supported accounts: {accounts}"
 msgstr ""
 
@@ -240,7 +396,37 @@ msgid ""
 "{games}"
 msgstr ""
 
+msgid "Tagging the following groups in your event: {groups}"
+msgstr ""
+
+msgid "That emoji was not found. Use your own or pick from {prefix}lfg emojis"
+msgstr ""
+
+msgid "That event was not found on this server."
+msgstr ""
+
 msgid "That group category is already defined for this server."
+msgstr ""
+
+msgid "That group is already defined for this server."
+msgstr ""
+
+msgid "That is not a valid stat type for {game}."
+msgstr ""
+
+msgid "That leaderboard was not found, please try again."
+msgstr ""
+
+msgid "That match ID does not look valid, please try again."
+msgstr ""
+
+msgid "That time isn't valid, try again."
+msgstr ""
+
+msgid "That timezone isn't valid, try again."
+msgstr ""
+
+msgid "That user can no longer be found."
 msgstr ""
 
 msgid "That user hasn't added an account for {game}"
@@ -287,6 +473,9 @@ msgstr ""
 msgid "There was an issue retrieving your profile from Uplay. Please try again in a few minutes."
 msgstr ""
 
+msgid "To attend send: {prefix}lfg join {key}"
+msgstr ""
+
 msgid ""
 "To set up rank roles do {prefix}prestige <game>\n"
 "\n"
@@ -298,6 +487,21 @@ msgid "Top {top_count} games currently being played across {server_count} server
 msgstr ""
 
 msgid "Top {top_count} games currently being played in {guild_name}"
+msgstr ""
+
+msgid "Tournament number {tournament_number} not found."
+msgstr ""
+
+msgid "Un-registering Ark server {}:{} for this server"
+msgstr ""
+
+msgid "Unable to add emoji, duplicate name: {details}"
+msgstr ""
+
+msgid "Updating {csgo_players_count} steam users found on this server."
+msgstr ""
+
+msgid "User {name} not found."
 msgstr ""
 
 msgid "WARNING: This will attempt to remove Discord roles related to this Prestige role, are you sure you want to continue?"
@@ -330,6 +534,21 @@ msgstr ""
 msgid "What server is your character on?"
 msgstr ""
 
+msgid "What time will the event start? (Format: YYYY-MM-DD HH:MM or x to cancel)"
+msgstr ""
+
+msgid "What timezone is the event in (e.g. UTC, America/New_York, Europe/London, Asia/Tokyo, Etc/GMT-7)? (x will use the default UTC)"
+msgstr ""
+
+msgid "Which groups would you like to tag with this event? Select as many as you want then select the tick."
+msgstr ""
+
+msgid "You are already attending this event."
+msgstr ""
+
+msgid "You can't add a profile to {name} because it's a bot"
+msgstr ""
+
 msgid "You do not have permission to change the language on {guild}."
 msgstr ""
 
@@ -342,22 +561,49 @@ msgstr ""
 msgid "You have already registered {account}"
 msgstr ""
 
+msgid "You have been removed from {key}."
+msgstr ""
+
+msgid "You have no groups to tag in your events. Add some with {prefix}lfg groups add"
+msgstr ""
+
+msgid "You have successfully signed up for {key}."
+msgstr ""
+
 msgid "You need to add an account for {game}, do {prefix}add {game_key}"
 msgstr ""
 
 msgid "You need to add some games, DM me with {prefix}add <account>. See {prefix}accounts for supported accounts."
 msgstr ""
 
+msgid "You need {roles} roles, please try again. (Or cancel with x)"
+msgstr ""
+
 msgid "You took too long to respond, Prestige setup cancelled."
 msgstr ""
 
+msgid "You took too long to respond, event creation cancelled."
+msgstr ""
+
 msgid "You took too long to respond, prestige setup cancelled."
+msgstr ""
+
+msgid "You were not attending this event."
 msgstr ""
 
 msgid "Your character is not part of any FC."
 msgstr ""
 
 msgid "Your profile is private. This setting can be modified in Overwatch under Options – Social."
+msgstr ""
+
+msgid "f disabled on {guild_name}"
+msgstr ""
+
+msgid "f enabled in {guild_name}"
+msgstr ""
+
+msgid "f enabled on {guild_name}"
 msgstr ""
 
 msgid "{channel} in {guild} registered to receive live match updates."
@@ -378,6 +624,9 @@ msgstr ""
 msgid "{game} live games for {guild}"
 msgstr ""
 
+msgid "{game} stats not found for {user} on {platform}"
+msgstr ""
+
 msgid "{guild} unregistered from receiving live match updates."
 msgstr ""
 
@@ -396,7 +645,16 @@ msgstr ""
 msgid "{name} does not appear to have any stats available."
 msgstr ""
 
+msgid "{steam_user}'s has no stats available for CSGO"
+msgstr ""
+
+msgid "{steam_user}'s profile is private, no stats could be retrieved."
+msgstr ""
+
 msgid "{user} does not does not appear to be a valid Z8Games user."
+msgstr ""
+
+msgid "{user} does not does not appear to be a valid osu! user."
 msgstr ""
 
 msgid "{user}'s Home Base"
